--- a/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/1/04.md
+++ b/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/1/04.md
@@ -2,10 +2,8 @@
 title = "०४"
 
 +++
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/04/01_utthAya_prAtarAchamyAharahaH_svAdhyAyamadhIyIta.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/04/01_utthAya_prAtarAchamyAharahaH_svAdhyAyamadhIyIta.md"  newLevelForH1="2" title="Oldenberg"  > </div>
 
-  
-  
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/04/01_utthAya_prAtarAchamyAharahaH_svAdhyAyamadhIyItA.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/04/02_adyA_no.md"  newLevelForH1="3" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/04/02_adyA_no_deva.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/04/02_adyA_no_deva.md"  newLevelForH1="2" title="Oldenberg"  > </div>
