--- a/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/1/17.md
+++ b/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/1/17.md
@@ -2,28 +2,32 @@
 title = "१७"
 
 +++
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/17/01_dadhikrAvNo_akAriShamiti_dadhi.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/17/01_dadhikrAvNo_akAriShamiti_dadhi.md"  newLevelForH1="2" title="Oldenberg"  > </div>
 
-  
-  
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/17/01_dadhikrAvNo_akAriShamiti_dadhi.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/17/02_vAgyatAvAsIyAtAmA_dhruvadarshanAd.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/17/03_astamite_dhruvaM_darshayati.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/17/04_dhruvaM_pashyAmi_prajAm.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/17/05_trirAtraM_brahmacharyaM_chareyAtAm.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/17/06_adhaH_shayIyAtAm.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/17/07_dadhyodanaM_sambhunjIyAtAM_pibatam.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/17/08_sAyamprAtarvaivAhyamagniM_parichareyAtAmagnaye_.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/17/09_pumA.N_sau_mitrAvaruNau.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/17/10_dasharAtramavipravAsaH.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-  
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/17/02_vAgyatAvAsIyAtAmA_dhruvadarshanAd.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/17/02_vAgyatAvAsIyAtAmA_dhruvadarshanAd.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/17/03_astamite_dhruvaM_darshayati.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/17/03_astamite_dhruvaM_darshayati.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/17/04_dhruvaM_pashyAmi_prajAm.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/17/04_dhruvaM_pashyAmi_prajAm.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/17/05_trirAtraM_brahmacharyaM_chareyAtAm.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/17/05_trirAtraM_brahmacharyaM_chareyAtAm.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/17/06_adhaH_shayIyAtAm.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/17/06_adhaH_shayIyAtAm.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/17/07_dadhyodanaM_sambhunjIyAtAM_pibatam.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/17/07_dadhyodanaM_sambhunjIyAtAM_pibatam.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/17/08_sAyamprAtarvaivAhyamagniM_parichareyAtAmagnaye.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/17/08_sAyamprAtarvaivAhyamagniM_parichareyAtAmagnaye.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/17/09_pumA.N_sau_mitrAvaruNau.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/17/09_pumA.N_sau_mitrAvaruNau.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/17/10_dasharAtramavipravAsaH.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/17/10_dasharAtramavipravAsaH.md"  newLevelForH1="2" title="Oldenberg"  > </div>
