--- a/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/1/25.md
+++ b/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/1/25.md
@@ -2,24 +2,35 @@
 title = "२५"
 
 +++
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/25/01_dasharAtre_chotthAnam.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/25/01_dasharAtre_chotthAnam.md"  newLevelForH1="2" title="Oldenberg"  > </div>
 
-  
-  
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/25/01_dasharAtre_chotthAnam.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/25/02_mAtApitarau_shiraHsnAtAvahatavAsasau.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/25/04_kumArashchaitasminneva_sUtikAgnau_sthAlIpAkam.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/25/05_janmatithiM_hutvA_trINi.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/25/06_tanmadhye_juhuyAdyasminjAtaH_syAt.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/25/07_AyuShTe_adya_gIrbhirayamagnirvareNyaH.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/25/08_nAmadheyaM_prakAshaM_kRtvA.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/25/10_brAhmaNAnsvastivAchyaivameva_mAsimAsi_janmatith.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-  
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/25/02_mAtApitarau_shiraHsnAtAvahatavAsasau.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/25/02_mAtApitarau_shiraHsnAtAvahatavAsasau.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/25/03_kumArashcha.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/25/03_kumArashcha.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/25/04_etasminneva_sUtikAgnau_sthAlIpAkam.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/25/04_etasminneva_sUtikAgnau_sthAlIpAkam.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/25/05_janmatithiM_hutvA_trINi.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/25/05_janmatithiM_hutvA_trINi.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/25/06_tanmadhye_juhuyAdyasminjAtaH_syAt.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/25/06_tanmadhye_juhuyAdyasminjAtaH_syAt.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/25/07_AyuShTe_adya_gIrbhirayamagnirvareNyaH.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/25/07_AyuShTe_adya_gIrbhirayamagnirvareNyaH.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/25/08_nAmadheyaM_prakAshaM_kRtvA.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/25/08_nAmadheyaM_prakAshaM_kRtvA.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/25/09_brAhmaNAn_svastivAchya.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/25/09_brAhmaNAn_svastivAchya.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/25/10_evameva_mAsimAsi_janmatithim.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/25/10_evameva_mAsimAsi_janmatithim.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/25/11_UrdhvaM_saMvatsarAdgRhye-gnau_juhoti.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/25/11_UrdhvaM_saMvatsarAdgRhye-gnau_juhoti.md"  newLevelForH1="2" title="Oldenberg"  > </div>
