--- a/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/2/17.md
+++ b/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/2/17.md
@@ -2,17 +2,14 @@
 title = "१७"
 
 +++
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/17/01_tRNAnyapyunChato_nityamagnihotraM_cha.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/17/01_tRNAnyapyunChato_nityamagnihotraM_cha.md"  newLevelForH1="2" title="Oldenberg"  > </div>
 
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/17/01_tRNAnyapyunChato_nityamagnihotraM_cha.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/17/02_odapAtrAttu_dAtavyamA_kAShThAjjuhuyAdapi.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/17/03_nopavAsaH_pravAse_syAtpatnI.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/17/04_vaishvadevamimaM_ye_tu.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-  
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/17/02_odapAtrAttu_dAtavyamA_kAShThAjjuhuyAdapi.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/17/02_odapAtrAttu_dAtavyamA_kAShThAjjuhuyAdapi.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/17/03_nopavAsaH_pravAse_syAtpatnI.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/17/03_nopavAsaH_pravAse_syAtpatnI.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/17/04_vaishvadevamimaM_ye_tu.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/17/04_vaishvadevamimaM_ye_tu.md"  newLevelForH1="2" title="Oldenberg"  > </div>
