--- a/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/5/04.md
+++ b/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/5/04.md
@@ -2,17 +2,20 @@
 title = "०४"
 
 +++
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/5/04/01_yadi_pArvaNastvakRto-nyatarastatashcharur.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/5/04/01_yadi_pArvaNastvakRto-nyatarastatashcharur.md"  newLevelForH1="2" title="Oldenberg"  > </div>
 
-  
-  
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/5/04/02_yadi_pArvaNastvakRto-nyatarastatashcharuragnaye.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/5/04/03_homAtikrame.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/5/04/04_sAyaM_doShAvastarnamaH_svAhA.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/5/04/05_prAtaH_prAtarvastarnamaH_svAheti.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/5/04/06_yAvanto_homAstAvatIrhutvA_pUrvavaddhomaH.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/5/04/02_agnaye_vaishvAnarAya_svAhAgnaye.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/5/04/02_agnaye_vaishvAnarAya_svAhAgnaye.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/5/04/03_homAtikrame.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/5/04/03_homAtikrame.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/5/04/04_sAyaM_doShAvastarnamaH_svAhA.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/5/04/04_sAyaM_doShAvastarnamaH_svAhA.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/5/04/05_prAtaH_prAtarvastarnamaH_svAheti.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/5/04/05_prAtaH_prAtarvastarnamaH_svAheti.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/5/04/06_yAvanto_homAstAvatIrhutvA_pUrvavaddhomaH.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/5/04/06_yAvanto_homAstAvatIrhutvA_pUrvavaddhomaH.md"  newLevelForH1="2" title="Oldenberg"  > </div>
