--- a/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/5/06.md
+++ b/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/5/06.md
@@ -2,11 +2,8 @@
 title = "०६"
 
 +++
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/5/06/01_vyAdhau_samutthita.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/5/06/01_vyAdhau_samutthita.md"  newLevelForH1="2" title="Oldenberg"  > </div>
 
-  
-  
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/5/06/01_vyAdhau_samutthita.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/5/06/02_imA_rudrA_ya.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/5/06/02_imA_rudrA_ya.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/5/06/02_imA_rudrA_ya.md"  newLevelForH1="2" title="Oldenberg"  > </div>
