--- a/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/5/07.md
+++ b/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/5/07.md
@@ -2,11 +2,14 @@
 title = "०७"
 
 +++
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/5/07/01_akRtasImantonnayane_chetprajAyeta.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/5/07/01_akRtasImantonnayane_chetprajAyeta.md"  newLevelForH1="2" title="Oldenberg"  > </div>
 
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/5/07/02_akRtasImantonnayane_chetprajAyetAkRtajAtakarmAs.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/5/07/03_tato-tIte_dashAha_utsange.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/5/07/04_mahAvyAhRtibhirhutvA_pUrvavaddhomaH.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/5/07/02_akRtajAtakarmAsIt.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/5/07/02_akRtajAtakarmAsIt.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/5/07/03_tato-tIte_dashAha_utsange.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/5/07/03_tato-tIte_dashAha_utsange.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/5/07/04_mahAvyAhRtibhirhutvA_pUrvavaddhomaH.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/5/07/04_mahAvyAhRtibhirhutvA_pUrvavaddhomaH.md"  newLevelForH1="2" title="Oldenberg"  > </div>
