--- a/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/5/11.md
+++ b/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/5/11.md
@@ -2,11 +2,8 @@
 title = "११"
 
 +++
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/5/11/01_yadi_gRhe_valmIkasambhUtirgRhotsargaH.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/5/11/01_yadi_gRhe_valmIkasambhUtirgRhotsargaH.md"  newLevelForH1="2" title="Oldenberg"  > </div>
 
-  
-  
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/5/11/11_yadi_gRhe_valmIkasambhUtirgRhotsargo-tha.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-  
-इति पञ्चमोऽध्यायः  
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/5/11/02_atha_trirAtramupoShya_mahAshAntim.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/5/11/02_atha_trirAtramupoShya_mahAshAntim.md"  newLevelForH1="2" title="Oldenberg"  > </div>
