--- a/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/1/09.md
+++ b/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/1/09.md
@@ -2,48 +2,59 @@
 title = "०९"
 
 +++
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/09/01_sruvaH_pAtram.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/09/01_sruvaH_pAtram.md"  newLevelForH1="2" title="Oldenberg"  > </div>
 
-  
-  
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/09/01_sruvaH_pAtram.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/09/02_arthalaxaNagrahaNam.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/09/03_savyena_kushAnAdAya_daxiNena.md"  newLevelForH1="3" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/09/02_arthalaxaNagrahaNam.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/09/02_arthalaxaNagrahaNam.md"  newLevelForH1="2" title="Oldenberg"  > </div>
 
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/09/04_sruveNAjyAhutIr.md"  newLevelForH1="3" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/09/03_savyena_kushAnAdAya_daxiNena.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/09/03_savyena_kushAnAdAya_daxiNena.md"  newLevelForH1="2" title="Oldenberg"  > </div>
 
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/09/04_sruveNAjyAhutIrjuhoti.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/09/04_sruveNAjyAhutIrjuhoti.md"  newLevelForH1="2" title="Oldenberg"  > </div>
 
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/09/05_uttarapashchArdhAdagnerAra.md"  newLevelForH1="3" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/09/05_uttarapashchArdhAdagnerArabhyAvichChinnaM_daxiN.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/09/05_uttarapashchArdhAdagnerArabhyAvichChinnaM_daxiN.md"  newLevelForH1="2" title="Oldenberg"  > </div>
 
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/09/06_daxiNapashchArdhAdagnerArabhyAvichChinnamuttara.md"  newLevelForH1="3" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/09/06_daxiNapashchArdhAdagnerArabhyAvichChinnamuttara.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/09/06_daxiNapashchArdhAdagnerArabhyAvichChinnamuttara.md"  newLevelForH1="2" title="Oldenberg"  > </div>
 
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/09/07_AgneyamuttaramAjyabhAgaM_saumyaM_daxiNam.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/09/07_AgneyamuttaramAjyabhAgaM_saumyaM_daxiNam.md"  newLevelForH1="2" title="Oldenberg"  > </div>
 
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/09/07_Agneyam_uttaram.md"  newLevelForH1="3" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/09/08_madhye-nyA_AhutayaH.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/09/08_madhye-nyA_AhutayaH.md"  newLevelForH1="2" title="Oldenberg"  > </div>
 
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/09/08_madhye-nyA_Ahutayo.md"  newLevelForH1="3" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/09/09_agnirjanitA_sa_me-mUm.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/09/09_agnirjanitA_sa_me-mUm.md"  newLevelForH1="2" title="Oldenberg"  > </div>
 
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/09/09_agnirjanitA_sa.md"  newLevelForH1="3" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/09/10_nAjyAhutiShu_nityAvAjyabhAgau_sviShTakRchcha.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/09/10_nAjyAhutiShu_nityAvAjyabhAgau_sviShTakRchcha.md"  newLevelForH1="2" title="Oldenberg"  > </div>
 
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/09/10_nAjyAhutiShu_nityAvAjyabhAgau_sviShTakRchcha.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/09/11_nityAhutiShu_cheti_mANDUkeyo.md"  newLevelForH1="3" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/09/11_nityAhutiShu_cheti_mANDUkeyaH.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/09/11_nityAhutiShu_cheti_mANDUkeyaH.md"  newLevelForH1="2" title="Oldenberg"  > </div>
 
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/09/12_mahAvyAhRtisarvaprAyashchittaprAjApatyAntaram.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/09/12_mahAvyAhRtisarvaprAyashchittaprAjApatyAntaram.md"  newLevelForH1="2" title="Oldenberg"  > </div>
 
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/09/12_mahAvyAhRti.md"  newLevelForH1="3" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/09/13_Ajye_haviShi_savye.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/09/13_Ajye_haviShi_savye.md"  newLevelForH1="2" title="Oldenberg"  > </div>
 
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/09/13_Ajye_haviShi_savye.md"  newLevelForH1="3" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/09/14_atha_chetsthAlIpAkeShu_sruchyagram.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/09/14_atha_chetsthAlIpAkeShu_sruchyagram.md"  newLevelForH1="2" title="Oldenberg"  > </div>
 
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/09/14_atha_chet.md"  newLevelForH1="3" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/09/15_tAnanuprahRtyAgnervAso-sIti.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/09/15_tAnanuprahRtyAgnervAso-sIti.md"  newLevelForH1="2" title="Oldenberg"  > </div>
 
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/09/15_tAnanuprahRtyAgnervAso-sIti.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/09/16_tisraH_samidho-bhyAdhAya.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/09/17_yathoktaM_paryuxaNam.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/09/18_anAmnAtamantrAsvAdiShTadevatAsvamuShyai_svAhAmu.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/09/19_vyAkhyAtaH_pratishrute_homakalpaH.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/09/16_tisraH_samidho-bhyAdhAya.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/09/16_tisraH_samidho-bhyAdhAya.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/09/17_yathoktaM_paryuxaNam.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/09/17_yathoktaM_paryuxaNam.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/09/18_anAmnAtamantrAsvAdiShTadevatAsvamuShyai.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/09/18_anAmnAtamantrAsvAdiShTadevatAsvamuShyai.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/09/19_vyAkhyAtaH_pratishrute_homakalpaH.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/09/19_vyAkhyAtaH_pratishrute_homakalpaH.md"  newLevelForH1="2" title="Oldenberg"  > </div>
