--- a/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/1/11.md
+++ b/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/1/11.md
@@ -2,22 +2,23 @@
 title = "११"
 
 +++
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/11/01_athaitAM_rAtrIM_shvastRtIyAm.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/11/01_athaitAM_rAtrIM_shvastRtIyAm.md"  newLevelForH1="2" title="Oldenberg"  > </div>
 
-  
-  
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/11/01_athaitAM_rAtrIM_shvastRtIyAm.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/11/02_tasyAM_rAtryAmatIte_nishAkAle.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/11/03_raktamahataM_vA_vAsaH.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/11/04_pashchAdagneH_kanyAmupaveshyAnvArabdhAyAM_mahAv.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/11/05_chatasro-ShTau_vAvidhavAH_shAkapiNDIbhiH.md"  newLevelForH1="3" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/11/02_tasyAM_rAtryAmatIte_nishAkAle.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/11/02_tasyAM_rAtryAmatIte_nishAkAle.md"  newLevelForH1="2" title="Oldenberg"  > </div>
 
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/11/03_raktamahataM_vA_vAsaH.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/11/03_raktamahataM_vA_vAsaH.md"  newLevelForH1="2" title="Oldenberg"  > </div>
 
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/11/06_etA_eva_devatAH.md"  newLevelForH1="3" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/11/04_pashchAdagneH_kanyAmupaveshyAnvArabdhAyAm.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/11/04_pashchAdagneH_kanyAmupaveshyAnvArabdhAyAm.md"  newLevelForH1="2" title="Oldenberg"  > </div>
 
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/11/05_chatasro-ShTau_vAvidhavAH_shAkapiNDIbhiH.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/11/05_chatasro-ShTau_vAvidhavAH_shAkapiNDIbhiH.md"  newLevelForH1="2" title="Oldenberg"  > </div>
 
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/11/07_ato_brAhmaNa-bhojanam.md"  newLevelForH1="3" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/11/06_etA_eva_devatAH.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/11/06_etA_eva_devatAH.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/11/07_ato_brAhmaNabhojanam.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/11/07_ato_brAhmaNabhojanam.md"  newLevelForH1="2" title="Oldenberg"  > </div>
