--- a/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/1/23.md
+++ b/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/1/23.md
@@ -2,10 +2,5 @@
 title = "२३"
 
 +++
-
-  
-  
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/23/23_kAkAtanyA_machakachAtanyAH_koshAtakyA.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-  
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/23/01_kAkAtanyA_machakachAtanyAH_koshAtakyA.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/23/01_kAkAtanyA_machakachAtanyAH_koshAtakyA.md"  newLevelForH1="2" title="Oldenberg"  > </div>
