--- a/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/2/03.md
+++ b/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/2/03.md
@@ -2,16 +2,17 @@
 title = "०३"
 
 +++
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/03/01_bhagaste_hastamagrabhItsavitA_hastamagrabhIt.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/03/01_bhagaste_hastamagrabhItsavitA_hastamagrabhIt.md"  newLevelForH1="2" title="Oldenberg"  > </div>
 
-  
-  
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/03/01_bhagaste_hastamagrabhItsavitA_hastamagrabhIt.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/03/02_aindrI_mAvRtamAvarta_AdityasyAvRtamanvAvarta.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/03/03_daxiNena_prAdeshena_daxiNama.N.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/03/04_tUShNIM_prasavyaM_paryAvRtyAthAsyordhvAngulim.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/03/02_aindrI_mAvRtamAvarta_AdityasyAvRtamanvAvarta.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/03/02_aindrI_mAvRtamAvarta_AdityasyAvRtamanvAvarta.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/03/03_daxiNena_prAdeshena_daxiNama.N.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/03/03_daxiNena_prAdeshena_daxiNama.N.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/03/04_tUShNIM_prasavyaM_paryAvRtya.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/03/04_tUShNIM_prasavyaM_paryAvRtya.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/03/05_athAsyordhvAnguliM_pANiM_hRdaye.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/03/05_athAsyordhvAnguliM_pANiM_hRdaye.md"  newLevelForH1="2" title="Oldenberg"  > </div>
