--- a/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/2/07.md
+++ b/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/2/07.md
@@ -2,61 +2,89 @@
 title = "०७"
 
 +++
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/01_athAnuvAchanasya.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/07/01_athAnuvAchanasya.md"  newLevelForH1="2" title="Oldenberg"  > </div>
 
-  
-  
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/01_athAnuvAchanasya.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/02_agneruttarata_upavishataH.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/04_prA~Nmukha_AchAryaH_pratya~Nmukha.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/05_daxiNena_jAnunAkramya_mUle.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/06_daxiNottarAbhyAM_pANibhyAM_madhye.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/07_tAntsavyenAchAryo-gre_sangRhya_daxiNenAdbhiH.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/03_sAvitrIM_bho.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/08_anubrUhItItaraH.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/03_sAvitrIM_te-nubravImItyAchAryo_gAyatrIm.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/03_anubrUhItItaro_gAyatrIM_te-nubravImItyAchAryo.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/11_anubrUhItItaro_vaishvAnarIM_te-nubravImItyAchAr.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/03_RShInbho.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/03_anubrUhItItara_RShI.N_ste-nubravImItyAchAryo.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/03_anubrUhItItaro_devatAste-nubravImItyAchAryashCh.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/14_anubrUhItItarashChandA.N_si_te-nubravImItyAchAr.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/03_shrutiM_bho.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/15_anubrUhItItaraH_shrutiM_te-nubravImItyAchAryaH.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/03_smRtiM_bho.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/16_anubrUhItItaraH_smRtiM_te-nubravImItyAchAryaH.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/03_shraddhAmedhe_bho.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/17_anubrUhItItaraH_shraddhAmedhe_te-nubravImItyAch.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/18_evamevamRSheryasyayasya_yoyo_mantro.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/19_api_vAvidannRShidaivatachChandA.N_si.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/20_evamekaikamRShimanuvAkaM_vAnubrUyAt.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/21_xudra_sUkteShvanuvAkam.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/27_yAvadvA_gururmanyetAdyottame_kAmam.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/29_samApte_kushataruNAnAdAyAnaDuhena_mUle.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/02_agneruttarata_upavishataH.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/07/02_agneruttarata_upavishataH.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/03_prA~Nmukha_AchAryaH_pratya~Nmukha.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/07/03_prA~Nmukha_AchAryaH_pratya~Nmukha.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/04_abhivAdya_pAdAvAchAryasya_pANI.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/07/04_abhivAdya_pAdAvAchAryasya_pANI.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/05_daxiNena_jAnunAkramya_mUle.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/07/05_daxiNena_jAnunAkramya_mUle.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/06_daxiNottarAbhyAM_pANibhyAM_madhye.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/07/06_daxiNottarAbhyAM_pANibhyAM_madhye.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/07_tAntsavyenAchAryo-gre_sangRhya_daxiNenAdbhiH.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/07/07_tAntsavyenAchAryo-gre_sangRhya_daxiNenAdbhiH.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/08_sAvitrIM_bho3_anubrUhItItaraH.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/07/08_sAvitrIM_bho3_anubrUhItItaraH.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/09_sAvitrIM_te-nubravImItyAchAryo.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/07/09_sAvitrIM_te-nubravImItyAchAryo.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/10_gAyatrIM_bho3_anubrUhItItaro.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/07/10_gAyatrIM_bho3_anubrUhItItaro.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/11_vaishvAmitrIM_bho3_anubrUhItItaro.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/07/11_vaishvAmitrIM_bho3_anubrUhItItaro.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/12_RShInbho3_anubrUhItItara_RShI.N.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/07/12_RShInbho3_anubrUhItItara_RShI.N.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/13_devatA_bho3_anubrUhItItaro.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/07/13_devatA_bho3_anubrUhItItaro.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/14_ChandA.Nsi_bho3_anubrUhItItarashChandA.N.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/07/14_ChandA.Nsi_bho3_anubrUhItItarashChandA.N.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/15_shrutiM_bho3_anubrUhItItaraH.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/07/15_shrutiM_bho3_anubrUhItItaraH.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/16_smRtiM_bho3_anubrUhItItaraH.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/07/16_smRtiM_bho3_anubrUhItItaraH.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/17_shraddhAmedhe_bho3_anubrUhItItaraH.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/07/17_shraddhAmedhe_bho3_anubrUhItItaraH.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/18_evamevamRSheryasyayasya_yoyo_mantro.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/07/18_evamevamRSheryasyayasya_yoyo_mantro.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/19_api_vAvidannRShidaivatachChandA.N_si.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/07/19_api_vAvidannRShidaivatachChandA.N_si.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/20_evamekaikamRShimanuvAkaM_vAnubrUyAt.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/07/20_evamekaikamRShimanuvAkaM_vAnubrUyAt.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/21_xudra_sUkteShvanuvAkam.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/07/21_xudra_sUkteShvanuvAkam.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/22_yAvadvA_gururmanyeta.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/07/22_yAvadvA_gururmanyeta.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/23_adyottame_kAmaM_sUkte.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/07/23_adyottame_kAmaM_sUkte.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/24_anuvAkasya_vA.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/07/24_anuvAkasya_vA.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/25_ekaikaM_sUktAdAv.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/07/25_ekaikaM_sUktAdAv.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/26_ityeShA_prabhRtiriti_kAmam.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/07/26_ityeShA_prabhRtiriti_kAmam.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/27_ityetadRShisvAdhyAye_vyAkhyAtam.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/07/27_ityetadRShisvAdhyAye_vyAkhyAtam.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/28_samApte_kushataruNAnAdAyAnaDuhena_mUle.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/07/28_samApte_kushataruNAnAdAyAnaDuhena_mUle.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/29_ahaHsheShaM_sthAnamupavAsashcha.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/07/29_ahaHsheShaM_sthAnamupavAsashcha.md"  newLevelForH1="2" title="Oldenberg"  > </div>
