--- a/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/2/09.md
+++ b/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/2/09.md
@@ -2,11 +2,11 @@
 title = "०९"
 
 +++
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/09/01_araNye_samitpANiH_sandhyAmAste.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/09/01_araNye_samitpANiH_sandhyAmAste.md"  newLevelForH1="2" title="Oldenberg"  > </div>
 
-  
-  
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/09/01_araNye_samitpANiH_sandhyAmAste.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/09/03_atikrAntAyAM_mahAvyAhRtIH_sAvitrIm.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/09/02_atikrAntAyAM_mahAvyAhRtIH_sAvitrIm.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/09/02_atikrAntAyAM_mahAvyAhRtIH_sAvitrIm.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/09/03_evaM_prAtaH_prA~NmukhastiShThannA.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/09/03_evaM_prAtaH_prA~NmukhastiShThannA.md"  newLevelForH1="2" title="Oldenberg"  > </div>
