--- a/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/3/14.md
+++ b/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/3/14.md
@@ -2,17 +2,20 @@
 title = "१४"
 
 +++
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/14/01_uttamAyAmapUpAnjuhoty.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/14/01_uttamAyAmapUpAnjuhoty.md"  newLevelForH1="2" title="Oldenberg"  > </div>
 
-  
-  
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/14/02_uttamAyAmapUpAnjuhotyukthyashchAtirAtrashcha_sa.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/14/04_gopashurajapashu_sthAlIpAko_vApi.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/14/05_api_vAraNye_kaxamapAdahedeShA.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/14/06_na_tveva_na.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-  
-इति तृतीयोऽध्यायः  
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/14/02_ukthyashchAtirAtrashcha_sadyaHkrIshChandasA_sah.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/14/02_ukthyashchAtirAtrashcha_sadyaHkrIshChandasA_sah.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/14/03_gopashurajapashu_sthAlIpAko_vApi.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/14/03_gopashurajapashu_sthAlIpAko_vApi.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/14/04_vA_gogrAsamAhared.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/14/04_vA_gogrAsamAhared.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/14/05_api_vAraNye_kaxamapAdahedeShA.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/14/05_api_vAraNye_kaxamapAdahedeShA.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/14/06_na_tveva_na.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/14/06_na_tveva_na.md"  newLevelForH1="2" title="Oldenberg"  > </div>
