--- a/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/4/02.md
+++ b/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/4/02.md
@@ -2,23 +2,26 @@
 title = "०२"
 
 +++
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/02/01_athAta_ekoddiShTam.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/02/01_athAta_ekoddiShTam.md"  newLevelForH1="2" title="Oldenberg"  > </div>
 
-  
-  
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/02/01_athAta_ekoddiShTam.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/02/02_ekapavitram.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/02/03_ekArghyam.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/02/04_ekapiNDam.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/02/05_nAvAhanaM_nAgnaukaraNaM_nAtra.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/02/06_abhiramyatAmiti_visargaH.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/02/07_saMvatsaramevaM_prete.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
-<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/02/08_chaturthavisargashcha.md"  newLevelForH1="3" includeTitle="true"  > </div>
-  
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/02/02_ekapavitram.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/02/02_ekapavitram.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/02/03_ekArghyam.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/02/03_ekArghyam.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/02/04_ekapiNDam.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/02/04_ekapiNDam.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/02/05_nAvAhanaM_nAgnaukaraNaM_nAtra.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/02/05_nAvAhanaM_nAgnaukaraNaM_nAtra.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/02/06_abhiramyatAmiti_visargaH.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/02/06_abhiramyatAmiti_visargaH.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/02/07_saMvatsaramevaM_prete.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/02/07_saMvatsaramevaM_prete.md"  newLevelForH1="2" title="Oldenberg"  > </div>
+
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/02/08_chaturthavisargashcha.md"  newLevelForH1="2" includeTitle="true"  > </div>
+<div class="js_include " url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/02/08_chaturthavisargashcha.md"  newLevelForH1="2" title="Oldenberg"  > </div>
